--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -9,7 +9,8 @@
       </a>
     </div>
   </div>
-  <div class="col-xs-12 col-sm-4">
+<div class="col-xs-12 col-sm-4">
+<a routerLink="/servers">Reload Page</a>
     <app-edit-server></app-edit-server>
     <hr>
     <app-server></app-server>
