--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -2,9 +2,12 @@
   <div class="col-xs-12 col-sm-4">
     <div class="list-group">
       <a
-        href="#"
+        [routerLink]="['/servers', 5, 'edit']"
+        [queryParams]="{allowEdit: '1'}"
+        fragment="loading"
+        routerLinkActive="router-link-active"
         class="list-group-item"
-        *ngFor="let server of servers">
+        *ngFor="let server of servers ">
         {{ server.name }}
       </a>
     </div>
