--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -2,12 +2,12 @@
   <div class="col-xs-12 col-sm-4">
     <div class="list-group">
       <a
-        [routerLink]="['/servers', 5, 'edit']"
+        [routerLink]="['/servers', server.id]"
         [queryParams]="{allowEdit: '1'}"
         fragment="loading"
         routerLinkActive="router-link-active"
         class="list-group-item"
-        *ngFor="let server of servers ">
+        *ngFor="let server of servers">
         {{ server.name }}
       </a>
     </div>
@@ -16,7 +16,7 @@
 <button class="btn btn-primary" (click)="onReload()">Reload Page</button>
     <app-edit-server></app-edit-server>
     <hr>
-    <app-server></app-server>
+    <!-- <app-server></app-server> -->
   </div>
 </div>
 
